Added search button, Added skeleton.css link

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watch Or Read</title>
 
+  
+
+    <!--Skeleton Boilerplate-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"/>
+    <!--LocalStyles-->
     <link rel="stylesheet" href="./styles.css"></link>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <!--fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,200;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="https://kit.fontawesome.com/f20c9d500c.js" crossorigin="anonymous"></script>
 
 </head>
@@ -33,7 +40,8 @@
         </div>
         <section id="search-div">
             <form>
-                <input id="search-bar" type="search" placeholder="Search" aria-label="Search">
+                <input id="search-input" type="search" placeholder="Search" aria-label="Search">
+                <button id="search-button">search</button>
             </form>
 
         </section>
