Adding stylings to buttons and margins to search bar

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <main class="content twelve columns">
                 <h1>Watch or Read</h1>
 
-                <div class="about">
-                    <p>
+                    <p id="about">
                         A paragraph about us goes here. blah blah blah blah blah
                     </p>
-                </div>
+        
+
                 <section id="search-div">
                     <form>
                         <input id="search-input" type="search" placeholder="Search" aria-label="Search">
@@ -63,7 +63,7 @@
                 <section id="book-results">
                     <h2 class="result-title" id="book-title">Book Title</h2>
                     <div class="row">
-                        <div class="three columns">
+                        <div class="four columns">
                             <img class="cover" id="book-cover" src="https://place-hold.it/100x150" />
                         </div>
                         <div class="eight columns" >
@@ -81,7 +81,7 @@
 
                     <h2 class="result-title" id="movie-title">Movie Title</h2>
                     <div class="row">
-                        <div class="three columns">
+                        <div class="four columns">
                             <img class="cover" id="movie-poster" src="https://place-hold.it/100x150" />
                         </div>
                         <div class="eight columns" >
