--- a/index.html
+++ b/index.html
@@ -36,19 +36,20 @@
                 </nav>
             </header>
         </div>
+
         <div class="row">
 
             <main class="content twelve columns">
                 <h1>Watch or Read</h1>
 
                     <p id="about">
-                        A paragraph about us goes here. blah blah blah blah blah
+                        This app allows you to search a movie and determine if there exists a book adaptation. It also compares reviews of the book and movie then makes a recomendation. 
                     </p>
         
 
                 <section id="search-div">
                     <form>
-                        <input id="search-input" type="search" placeholder="Search" aria-label="Search">
+                        <input id="search-input" type="search" placeholder="Movie Title" aria-label="Search">
                         <button id="search-button">search</button>
                     </form>
 
@@ -59,7 +60,7 @@
         <hr>
         <!--Search Results-->
         <div class="row">
-            <div class="five columns">
+            <div class="six columns">
                 <section id="book-results">
                     <h2 class="result-title" id="book-title">Book Title</h2>
                     <div class="row">
@@ -76,7 +77,7 @@
 
                 </section>
             </div>
-            <div class="five columns">
+            <div class="six columns">
                 <section id="movie-results">
 
                     <h2 class="result-title" id="movie-title">Movie Title</h2>
