changed layout look

--- a/index.html
+++ b/index.html
@@ -49,8 +49,20 @@
 
                 <section id="search-div">
                     <form>
-                        <input id="search-input" type="search" placeholder="Movie Title" aria-label="Search">
-                        <button id="search-button">search</button>
+                        <div class="row">
+                            <div class="five columns">
+                                <input id="search-input" type="search" placeholder="Title" aria-label="Search">
+                                <br>
+                                <input id="search-input" type="search" placeholder="Author" aria-label="Search">
+                                <br>
+                                <input id="search-input" type="search" placeholder="Year" aria-label="Search">
+                            </div>
+                            <div class="six columns">
+                             <button id="search-button">search</button>
+                            </div>
+                        </div>
+                        
+
                     </form>
 
                 </section>
