Added imdb score

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         
                     </div>
 
-                    <p class="rating" id="movie-rating">IMDB Rating: <span id="imdb-score">3</span></p>
+                    <p class="rating" id="movie-rating">IMDB Rating: <span id="imdb-score">3</span>/10</p>
 
                 </section>
             </div>
