--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                 <section id="search-div">
                     <form>
                         <div class="row">
-                            <div class="five columns">
+                            <div class="nine columns">
                                 <input id="search-input" type="search" placeholder="Title" aria-label="Search">
                                 <br>
                                 <input id="search-input" type="search" placeholder="Author" aria-label="Search">
                                 <br>
                                 <input id="search-input" type="search" placeholder="Year" aria-label="Search">
                             </div>
-                            <div class="six columns">
+                            <div class="three columns">
                              <button id="search-button">search</button>
                             </div>
                         </div>
@@ -80,7 +80,7 @@
                             <img class="cover" id="book-cover" src="https://place-hold.it/100x150" />
                         </div>
                         <div class="eight columns" >
-                            <p class="description" id="book-plot">book description</p>
+                            <p class="description" id="book-plot">Book Description</p>
                         </div>
                         
                     </div>
@@ -98,7 +98,7 @@
                             <img class="cover" id="movie-poster" src="https://place-hold.it/100x150" />
                         </div>
                         <div class="eight columns" >
-                            <p class="description" id="movie-plot">Movie description</p>
+                            <p class="description" id="movie-plot">Movie Description</p>
                         </div>
                         
                     </div>
