updated search perameters

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     <form>
                         <div class="row">
                             <div class="nine columns">
-                                <input id="search-input" type="search" placeholder="Title" aria-label="Search">
+                                <input id="title-input" type="search" placeholder="Title" aria-label="Search">
                                 <br>
-                                <input id="search-input" type="search" placeholder="Author" aria-label="Search">
+                                <input id="author-input" type="search" placeholder="Author" aria-label="Search">
                                 <br>
-                                <input id="search-input" type="search" placeholder="Year" aria-label="Search">
+                                <input id="year-input" type="search" placeholder="Year" aria-label="Search">
                             </div>
                             <div class="three columns">
                              <button id="search-button">search</button>
