--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <form>
                                 <input class="search-input" id="title-input" type="search" placeholder="Book Title" aria-label="Search">
                                 <input class="search-input" id="author-input" type="search" placeholder="Author" aria-label="Search">
-                                <button id="search-button">Book Search</button>
+                                <button id="book-search-button">Book Search</button>
                             </form>
                         </div>
 
@@ -68,7 +68,7 @@
                             <form>
                                 <input class="search-input" id="movie-title-input" type="search" placeholder="Movie Title" aria-label="Search">
                                 <input class="search-input" id="movie-year-input" type="search" placeholder="Movie Year" aria-label="Search">
-                                <button id="search-button">Movie Search</button>
+                                <button id="movie-search-button">Movie Search</button>
                             </form>
                         </div>
 
