--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Watch Or Read</title>
 
 
+    
 
     <!--Skeleton Boilerplate-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
+
     <!--LocalStyles-->
     <link rel="stylesheet" href="./styles.css">
     </link>
@@ -80,16 +82,16 @@
             <div class="six columns">
                 <section id="results-display">
                     <h2 class="result-title" id="book-results">Book Results</h2>
-                    <button class="button-primary results" id="book-1">harry potter and the sorcerer's stone</button>
-                    <button class="button-primary results" id="book-2">harry potter and the chamber of secrets</button>
-                    <button class="button-primary results" id="book-3">harry potter and the prisoner of azkaban</button>
+                    <button class="results" id="book-1">harry potter and the sorcerer's stone</button>
+                    <button class="results" id="book-2">harry potter and the chamber of secrets</button>
+                    <button class="results" id="book-3">harry potter and the prisoner of azkaban</button>
             </div>
 
             <div class="six columns">
                 <h2 class="result-title" id="movie-results">Movie Results</h2>
-                <button class="button-primary results" id="movie-1">harry potter and the sorcerer's stone</button>
-                <button class="button-primary results" id="movie-2">harry potter and the chamber of secrets</button>
-                <button class="button-primary results" id="movie-3">harry potter and the prisoner of azkaban</button>
+                <button class="results" id="movie-1">harry potter and the sorcerer's stone</button>
+                <button class="results" id="movie-2">harry potter and the chamber of secrets</button>
+                <button class="results" id="movie-3">harry potter and the prisoner of azkaban</button>
             </div>
             </section>
         </div>
