--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                         <div class="six columns">
                             <form>
-                                <input class="search-input" id="movie-title-input" type="search" placeholder="Movie Title" aria-label="Search">
+                                <input class="search-input" id="movie-input" type="search" placeholder="Movie Title" aria-label="Search">
                                 <input class="search-input" id="movie-year-input" type="search" placeholder="Movie Year" aria-label="Search">
                                 <button id="movie-search-button">Movie Search</button>
                             </form>
