adding suggestion display

--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
 
         <hr>
 
+        <!-- Suggestion Display -->
+        <div class="row">
+            <div class="twelve columns">
+                <h3 id="suggestion"></h3>
+                    <br>
+            </div>
+        </div>
+
 
 
         <!--Search Results Display-->
