Moved final result display into independent function, added a couple fail checks for review and description.

--- a/index.html
+++ b/index.html
@@ -91,14 +91,11 @@
                 <div class="six columns">
                     <div id="book-results">
                         <h2 class="result-title" >Book Results</h2>
-                        <button class="results" id="book-1">harry potter and the sorcerer's stone</button>
-                        <button class="results" id="book-2">harry potter and the chamber of secrets</button>
-                        <button class="results" id="book-3">harry potter and the prisoner of azkaban</button>
                     </div>
                 </div>
 
                 <div class="six columns">
-                    <div id="book-results">
+                    <div id="movie-results">
                         <h2 class="result-title" id="movie-results">Movie Results</h2>
                         <button class="results" id="movie-1">harry potter and the sorcerer's stone</button>
                         <button class="results" id="movie-2">harry potter and the chamber of secrets</button>
