Fixed functionality with rating. changed ratijng place holder to - from 3.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
                     </div>
 
-                    <p class="rating" id="book-rating">Google Books Rating: <span id="google-books-score">3</span>/10
+                    <p class="rating" id="book-rating">Google Books Rating: <span id="google-books-score">-</span>/10
                     </p>
 
                 </section>
@@ -148,7 +148,7 @@
 
                     </div>
 
-                    <p class="rating" id="movie-rating">IMDB Rating: <span id="imdb-score">3</span>/10</p>
+                    <p class="rating" id="movie-rating">IMDB Rating: <span id="imdb-score">-</span>/10</p>
 
                 </section>
             </div>
