fixed spelling of recommendation

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <p id="about">
                     This app allows you to search a movie and determine if there exists a book adaptation. It also
-                    compares reviews of the book and movie then makes a recomendation.
+                    compares reviews of the book and movie then makes a recommendation.
                 </p>
 
 
